# ganzu

./: Cargo.toml  README.md  filters.dhall  types.dhall
dhall/types/: Filter.dhall  FilterAction.dhall  Predicate.dhall  Rule.dhall
src/: args.rs  config.rs  error.rs  example.rs  file.rs  filter.rs  kdl.rs  lib.rs  main.rs  rule.rs
