[package]
name = "magic-broom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_dhall = "0.11.0"
tree_magic = "0.2.3"
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0.117", features = ["derive"] }
nix = "0.23.1"
bincode = "1.3.3"
# miette = { version = "3.3.0", features = ["fancy"] }
# thiserror = "1.0.30"
